<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_toproundedwhite_xlarge"
    android:orientation="vertical"
    android:paddingHorizontal="22dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="#3B4145"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/keluar_dari_akun_hirehub" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="10"
        android:minLines="3"
        android:textSize="14sp"
        tools:text="@string/sign_out_confirmation" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#C7E5F4"
        android:text="@string/next"
        android:textColor="#077CB6"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
