<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_toproundedwhite_xlarge"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_close"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_close_btm_sheet"
        android:tint="#505658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_illustration"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close"
        android:src="@drawable/ic_info_yellow" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_illustration"
        android:textStyle="bold"
        android:textColor="#3B4145"
        android:text="@string/profile_kosong" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:text="@string/company_data_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_action_data"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        android:background="@drawable/bg_rect_rad_medium_blue"
        android:textColor="#FCFCFC"
        android:text="@string/company_data" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_action" />

</androidx.appcompat.widget.LinearLayoutCompat>